force-app/main/default/objects/PCC_Exclusion__c/PCC_Exclusion__c.object-meta.xml
<CustomObject>
    <description>Qantas Channel Support will maintain the PCC list that should be excluded from processing in the inbound/GDS file. This potentially will also contain the PCCs excluded from Qantas Channel due to inappropriate transactions. The Inbound ETL job is used to reference the excluded-PCC.</description>
    <label>PCC Exclusion</label>
    <nameField>
        <displayFormat>PCC Exc-{0000}</displayFormat>
        <label>PCC Exclusion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PCC Exclusion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>