force-app/main/default/objects/PCC_Exclusion__c/fields/Channel_exclude__c.field-meta.xml
<CustomField>
    <fullName>Channel_exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Exclude PCC/OID from the Qantas Channel</inlineHelpText>
    <label>Channel exclude</label>
    <type>Checkbox</type>
</CustomField>