force-app/main/default/objects/PCC_Exclusion__c/fields/PCC__c.field-meta.xml
<CustomField>
    <fullName>PCC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pseudo City Code or Office ID</inlineHelpText>
    <label>PCC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>