force-app/main/default/objects/PCC_Exclusion__c/recordTypes/Agency_Channel.recordType-meta.xml
<RecordType>
    <fullName>Agency_Channel</fullName>
    <active>true</active>
    <description>This is being used by Qantas Channel Support who will maintain the PCC list that should be excluded from processing in the inbound/GDS file.</description>
    <label>Agency Channel</label>
</RecordType>