force-app/main/default/objects/PCC_Exclusion__c/validationRules/PCC_Length_according_to_GDS_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>PCC_Length_according_to_GDS_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$Setup.EnableValidationRule__c.Flag_To_Prevent_TMC_PCC_VR_Fired__c = FALSE, 
RecordType.DeveloperName = &apos;Agency_Channel&apos;, 
NOT(ISBLANK(PCC__c)), NOT(ISBLANK(GDS__c)),
OR(
LEN(PCC__c) &gt; GDS__r.PCC_Max_Length__c,
LEN(PCC__c) &lt; GDS__r.PCC_Min_Length__c))</errorConditionFormula>
    <errorDisplayField>PCC__c</errorDisplayField>
    <errorMessage>GDS PCC length should be between Max length and Min length from GDS Reference</errorMessage>
</ValidationRule>