force-app/main/default/objects/PCC_Exclusion__c/validationRules/Restrict_PCC_To_AlphaNumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_PCC_To_AlphaNumeric</fullName>
    <active>true</active>
    <description>PCC or Pseudo City Code value should be Alphanumeric</description>
    <errorConditionFormula>AND(
$Setup.EnableValidationRule__c.Flag_To_Prevent_TMC_PCC_VR_Fired__c = FALSE,
RecordType.DeveloperName = &apos;Agency_Channel&apos;, 
NOT(ISBLANK(PCC__c)), NOT(REGEX(PCC__c ,&quot;^[a-zA-Z0-9]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>PCC__c</errorDisplayField>
    <errorMessage>PCC should not contain Special characters or spaces</errorMessage>
</ValidationRule>