force-app/main/default/objects/PCC_Exclusion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>GDS__c</columns>
    <columns>PCC__c</columns>
    <columns>Channel_exclude__c</columns>
    <columns>Inventory_exclude__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>